[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ream-moe"
version = "0.1.0"
description = "REAM/REAP-style Mixture-of-Experts compression framework supporting Qwen, Mixtral, DeepSeek, GLM, Ernie, and more"
authors = [
    { name = "Akicuo", email = "akicuo@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Akicuo/ream-moe"
Repository = "https://github.com/Akicuo/ream-moe"
Issues = "https://github.com/Akicuo/ream-moe/issues"

[project.scripts]
ream-compress = "ream_moe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ream_moe*"]

[tool.setuptools.package-data]
ream_moe = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
